--- a/login-registar-recuperar verificacion/package.json
+++ b/login-registar-recuperar verificacion/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "mongodb": "^6.8.0"
+    "mongodb": "^6.8.0",
+    "nodemailer": "^6.9.14"
   }
 }
